[metadata]
name = clip_graph
version = attr: clip_graph.__version__
author = William Brannon
author_email = wbrannon@mit.edu
url = https://github.com/wwbrannon/clip-graph
description = CLIP for graphs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
zip_safe = true
include_package_data = false
package_dir =
    =src
packages = find:

[sdist]
formats = zip, gztar

[bdist_wheel]
universal = true

[options.packages.find]
exclude =
    ./bin/
    ./data/
    ./notebooks/
    ./lightning_logs/

[options.extras_require]
dev =
    mypy
    pylint
    pytest
